# ChangeLog for dev-php/PEAR-Net_Sieve
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Net_Sieve/ChangeLog,v 1.5 2003/12/25 11:39:36 coredumb Exp $

*PEAR-Net_Sieve-0.8.1-r1 (25 Dec 2003)

  25 Dec 2003; Tal Peer <coredumb@gentoo.org> PEAR-Net_Sieve-0.8.1-r1.ebuild:
  Converted to new eclass.

  13 Oct 2003; Robin H. Johnson <robbat2@gentoo.org> metadata.xml:
  add metadata.xml

  11 Sep 2003; Robin H. Johnson <robbat2@gentoo.org>
  PEAR-Net_Sieve-0.8.1.ebuild:
  fix bug #28168

*PEAR-Net_Sieve-0.8.1 (27 Jan 2003)

  27 Jan 2003; Ryan Phillips <rpillips@gentoo.org> PEAR-Net_Socket-1.0.1.ebuild :
  New package
