@@ -1,6 +1,8 @@
-MD5 3ccf5ccf18897c65ff92c1136e33de38 ChangeLog 697
-MD5 54c7cc9fb69e3c794028d8397fd46648 PEAR-Net_Sieve-0.8.1.ebuild 689
+MD5 d194ffbda29a16649ae02502bf5543c8 ChangeLog 826
+MD5 359f7ea0ecb7f09cd9260ed78f89ff0b PEAR-Net_Sieve-0.8.1.ebuild 690
 MD5 34b376f52ca199fffb4e52b83169574a metadata.xml 156
-MD5 f47abe78041978ba45daec936aa18db1 PEAR-Net_Sieve-0.8.1-r1.ebuild 478
+MD5 68f66e2ee3b2cf85244bdcda2a4a4ef5 PEAR-Net_Sieve-0.8.1-r1.ebuild 478
+MD5 48795d9d167f81b1bfd33db49fbe4df7 PEAR-Net_Sieve-0.9.0.ebuild 475
 MD5 1b465cc8457b7fafe917b5580fad93c7 files/digest-PEAR-Net_Sieve-0.8.1 62
 MD5 1b465cc8457b7fafe917b5580fad93c7 files/digest-PEAR-Net_Sieve-0.8.1-r1 62
+MD5 b0e345db764e54eca5b429533c3c0dab files/digest-PEAR-Net_Sieve-0.9.0 62
