@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Net_Sieve/PEAR-Net_Sieve-0.8.1-r1.ebuild,v 1.2 2004/02/01 10:32:11 coredumb Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Net_Sieve/PEAR-Net_Sieve-0.9.0.ebuild,v 1.1 2004/02/01 10:32:11 coredumb Exp $
 
 inherit php-pear
 
